# jmespath_rs

./: .gitignore  ARCHITECTURE_TYPED.md  Cargo.toml  LICENSE.md  README.md  dictexprs.pyi  jmespath_rs.pyi  pyproject.toml
docs/: TYPE_BEHAVIOR_MAP.md
src/: checks.rs  conversions.rs  datajson.rs  display.rs  eval.rs  exprs.rs  holder.rs  lib.rs  lists.rs  matchs.rs  nodes.rs  parsing.rs  queries.rs  querybuilder.rs  strings.rs  structs.rs  util.rs
tests/: bench.py  cases.py  checks.py  data.py  foo.py  main.py  output.py
