[package]
edition = "2021"
name    = "dictexprs"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]
name       = "dictexprs"

[dependencies]
pyo3       = { version = "0.26.0", features = ["extension-module", "serde"] }
pythonize  = "=0.26.0"
serde      = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
[profile.release]
codegen-units = 1
lto           = "fat"
