[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "jmespath_rs"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "jmespath>=1.0.1",
    "polars>=1.34.0",
]
