[build-system]
build-backend = "maturin"
requires      = ["maturin>=1.8,<2.0"]

[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
name = "dictexprs"
requires-python = ">=3.12"
[tool.maturin]
features        = ["pyo3/extension-module"]
profile         = "release"
use-base-python = false
[tool.uv.sources]
doctester = { git = "https://github.com/OutSquareCapital/doctester.git" }

[dependency-groups]
dev = [
    "doctester",
    "factory-boy>=3.3.3",
    "jmespath>=1.0.1",
    "polars>=1.34.0",
    "pyochain>=0.5.2",
]
